// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEditor store reducer when PostEditor/CLEAR_LINK_PREVIEW linkPreviewId is cleared and status set to "cleared" 1`] = `
Object {
  "linkPreviewId": null,
  "linkPreviewStatus": "cleared",
}
`;

exports[`PostEditor store reducer when PostEditor/FETCH_LINK_PREVIEW linkPreviewId is not set status is "invalid" if a record is not found 1`] = `
Object {
  "linkPreviewId": null,
  "linkPreviewStatus": "invalid",
}
`;

exports[`PostEditor store reducer when PostEditor/FETCH_LINK_PREVIEW linkPreviewId is set if record is found 1`] = `
Object {
  "linkPreviewId": "found",
  "linkPreviewStatus": null,
}
`;

exports[`PostEditor store reducer when PostEditor/REMOVE_LINK_PREVIEW linkPreviewId is cleared and status set to "removed" 1`] = `
Object {
  "linkPreviewId": null,
  "linkPreviewStatus": "removed",
}
`;

exports[`PostEditor store reducer when PostEditor/SET_ANNOUNCEMENT announcement is set approrpiately 1`] = `
Object {
  "announcement": true,
  "linkPreviewId": null,
  "linkPreviewStatus": null,
}
`;

exports[`PostEditor store setAnnouncement 1`] = `
Object {
  "payload": "type",
  "type": "PostEditor/SET_ANNOUNCEMENT",
}
`;

exports[`PostEditor store showAnnouncementConfirmation 1`] = `
Object {
  "payload": true,
  "type": "PostEditor/SHOW_ANNOUNCEMENT_CONFIRMATION",
}
`;
